--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ body,*{
     margin: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+main{
+    display:flex;
+}
 #game{
     width: 614px;
     margin:2px auto;
